[package]
name = "oh"
version = "0.0.0"
authors = ["dakokonutboi <ghaliomar.g.ink@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A collections of functions for highly efficient programmers."
repository = "https://github.com/yuulive/oh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
